--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "nodemon": "^2.0.22",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.0",
+    "nodemon": "^1.19.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.1"
+    "react-dropdown-select": "^4.9.4",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-form": "^8.3.10",
+    "redux-thunk": "^2.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
