--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "redux-thunk": "^2.4.2"
   },
   "scripts": {
-    "start": "REACT_APP_BACKEND='production' react-scripts start",
-    "dev": "REACT_APP_BACKEND='development' react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
